# mush

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  main.c  mush  mush.c  mush.h
include/: mush.h
src/: CMakeLists.txt  mush.c
test/: CMakeLists.txt  test_mush.c
